# understanding-llms

./: .gitignore  README.md  pyproject.toml
artifacts/llm_intro/tokenizer/: TinyStoriesV2-GPT4-train-merges.txt  TinyStoriesV2-GPT4-train-vocab.json  owt_train-merges.txt  owt_train-vocab.json
scripts/: download_data.py  setup_env.sh
src/configs/: config_llm_intro.yaml
src/llm_intro/: __init__.py  generation.py
src/llm_intro/model/: __init__.py  attention.py  layers.py  transformer.py
src/llm_intro/tokenizers/: bpe.py  create_chunks.py  encoder.py
src/llm_intro/training/: __init__.py  data.py  optimizer.py  trainer.py
src/llm_intro/utils/: __init__.py  checkpointing.py  loss.py
src/modules/: embedding.py  linear.py
src/tokenizer/: bpe.py  encoder.py
